--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,10 @@ header img{
   font-style: normal;
   color: #deb164;
 }
+.row-house .container p.p2{
+  text-align: center;
+  font-size: 20px;
+}
 .row-aboutus .rowT{
   text-align: center;
   padding: 42px 0;
@@ -216,6 +220,9 @@ header img{
 .row-inter .rowT{
   text-align: center;
   padding: 42px 0;
+}
+.row-inter .rowT img{
+  max-width: 100%;
 }
 .row-inter p{
   text-align: center;
@@ -423,12 +430,12 @@ footer .cp2{
   }
 
   .row-why li{
-    height: 120px;
+    height: 140px;
     margin-bottom: 0px;
   }
   .row-house{
     height: 644px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
   }
   .row-house .container{
     width: 998px;
